--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "axios": "^1.13.1",
+    "chart.js": "^4.5.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
