--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jspdf": "^3.0.4",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
+    "next-cloudinary": "^6.17.5",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
